<resources>
    <string name="app_name">TransitoUrbano</string>
    <string name="menu_map">Map</string>
    <string name="menu_roadBlocks">Road Blocks</string>
    <string name="menu_topRoadBlocks">Top Road Blocks</string>
    <string name="menu_user">My Profile</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="list_of_blocked_roads">List of blocked roads</string>
    <string name="placeholder">PLACEHOLDER</string>
    <string name="discount_list_text">Discount List:</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="ranking">Ranking:</string>
    <string name="create_a_new_block_road_maraker">Create a new block road maraker</string>
    <string name="address_default">Address default</string>
    <string name="create_road_block">Create road block</string>
    <string name="road_block_information_hint">Road block information</string>
    <string name="road_block_address_hint">Road block address</string>
    <string name="promotion">For one use only</string>
    <string name="probability">Probability:</string>
    <string name="register_top_roadBlock">Register top blocked roads</string>
    <string name="add_top_block">Add Top Block Road</string>
    <string name="welcome">Welcome</string>
    <string name="user_create">User Create</string>
</resources>
